# simple-order-management-platform

./: .gitignore  CHANGELOG.md  CLI_SHORTCUTS.md  CURRENCY_FIX_SUMMARY.md  README.md  README_SIMPLE_ORDER_MANAGEMENT.md  REFACTORING_SUMMARY.md  create_sample_output.py  debug_ib_portfolio_vs_positions.py  debug_portfolio_weights.py  download-positions  download-positions-cached  generate-orders  holdings  list-portfolios  market-data-status  model-portfolios  positions  pr_description.md  pyproject.toml  rebalance  requirements.txt  run-daily-update  scheduler-status  simple-order-help  start-scheduler  test-connection  test-contract-creation  test-excel-format  test-integrations  test-market-data-fixes  test-market-data-system  test-original-approach  test_currency_fix.py  test_portfolio_methods.py  test_positions_fix.py  test_real_portfolio_generation.py  update-market-data
ManualWork/Daily/: acc_summary_20250906.csv
config/: app.yaml  master_config.yaml  strategies.yaml  strategies.yaml.backup
config/universes/: etf_master_universe.xlsx  futures_master_universe.backup.xlsx  futures_master_universe.xlsx
data/master/futures/: 1OZ.csv  (+18 more)
data/metadata/: last_update.json
docs/: README.md  SCHEDULER_GUIDE.md  cli-reference.md  daily-workflow.md  ibkr-setup.md  installation.md  model-portfolios.md
scripts/: check_ib_ports.py  clean_futures_master.py  create_master_universe.py  create_verified_test.py  deploy_scheduler.sh  portfolio-scheduler.service  scheduler_daemon.py  setup_gtaa_accounts.py  test_basic.py  update_arki_macro_mini.py  update_futures_universe.py
(+72 files in other folders)
